chore: migrate to Vite + base setup for Firebase (env)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!doctype html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zenko Financial</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
-</html>
+<!DOCTYPE html>\n<html lang="es">\n<head>\n    <meta charset="UTF-8" />\n    <meta name="viewport" content="width=device-width, initial-scale=1.0" />\n    <title>Kodo - Financial App</title>\n</head>\n<body>\n    <div id="app">\n        <h1>Kodo Financial</h1>\n        <div id="auth-container">\n            <h2>Login / Register</h2>\n            <input type="email" id="email" placeholder="Email" />\n            <input type="password" id="password" placeholder="Password" />\n            <button id="login-btn">Login</button>\n            <button id="register-btn">Register</button>\n            <button id="logout-btn" style="display:none;">Logout</button>\n        </div>\n        <div id="user-info" style="display:none;">\n            <p>Welcome, <span id="user-email"></span>!</p>\n        </div>\n    </div>\n    <script type="module" src="/src/main.js"></script>\n</body>\n</html>
